more bug squashing! Incorrect url to img

--- a/src/pages/styles/styles.scss
+++ b/src/pages/styles/styles.scss
@@ -751,7 +751,7 @@ footer div a {
 }
 
 .HTB100-strategy {
-  background-image: url("../../images/htb100-stratagize.jpg");
+  background-image: url("../../images/HTB100-stratagize.jpg");
 }
 
 .HTB100-driver {
